; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_in6_cga.c_in6_cga_query.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet6/extr_in6_cga.c_in6_cga_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.in6_cga_nodecfg = type { i32, i32 }

@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@in6_cga = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @in6_cga_query(%struct.in6_cga_nodecfg* %0) #0 {
  %2 = alloca %struct.in6_cga_nodecfg*, align 8
  store %struct.in6_cga_nodecfg* %0, %struct.in6_cga_nodecfg** %2, align 8
  %3 = load %struct.in6_cga_nodecfg*, %struct.in6_cga_nodecfg** %2, align 8
  %4 = icmp ne %struct.in6_cga_nodecfg* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @VERIFY(i32 %5)
  %7 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %8 = call i32 @in6_cga_node_lock_assert(i32 %7)
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @in6_cga, i32 0, i32 1), align 4
  %10 = load %struct.in6_cga_nodecfg*, %struct.in6_cga_nodecfg** %2, align 8
  %11 = getelementptr inbounds %struct.in6_cga_nodecfg, %struct.in6_cga_nodecfg* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @in6_cga, i32 0, i32 0), align 4
  %13 = load %struct.in6_cga_nodecfg*, %struct.in6_cga_nodecfg** %2, align 8
  %14 = getelementptr inbounds %struct.in6_cga_nodecfg, %struct.in6_cga_nodecfg* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  ret void
}

declare dso_local i32 @VERIFY(i32) #1

declare dso_local i32 @in6_cga_node_lock_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
